[gd_scene load_steps=2 format=3 uid="uid://80q5ukhbxqkf"]

[ext_resource type="Script" path="res://scenes/gui.gd" id="1_hyr80"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hyr80")

[node name="Labels" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -96.0
offset_right = 256.0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Labels"]
layout_mode = 2
text = "W, A, S, D -> Move"

[node name="Label2" type="Label" parent="Labels"]
layout_mode = 2
text = "E -> Lights"

[node name="ChangeColor" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ChangeColor"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -464.0
offset_right = -14.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ColorPicker" type="ColorPicker" parent="ChangeColor/VBox"]
layout_mode = 2
edit_alpha = false
sampler_visible = false
color_modes_visible = false
presets_visible = false

[node name="Button" type="Button" parent="ChangeColor/VBox"]
layout_mode = 2
text = "Change Color"

[node name="FPS" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 8.0
offset_right = 72.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="FPS"]
layout_mode = 2
text = "FPS:"

[node name="Value" type="Label" parent="FPS"]
layout_mode = 2
text = "000"

[connection signal="color_changed" from="ChangeColor/VBox/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="ChangeColor/VBox/Button" to="." method="_on_button_pressed"]
